--- a/css/index.scss
+++ b/css/index.scss
@@ -4,9 +4,9 @@ $Strong-cyan: hsl(172, 67%, 45%);
 
 $Very-dark-cyan: hsl(183, 100%, 15%);
 $Dark-grayish-cyan: hsl(186, 14%, 43%);
-$Dark-grayish-cyan: hsl(184, 14%, 56%);
+$Dark-grayish-cyan2: hsl(184, 14%, 56%);
 $Light-grayish-cyan: hsl(185, 41%, 84%);
-$Light-grayish-cyan: hsl(189, 41%, 97%);
+$Light-grayish-cyan2: hsl(189, 41%, 97%);
 $White: hsl(0, 0%, 100%);
 
 html { box-sizing: border-box; }
@@ -15,7 +15,132 @@ html { box-sizing: border-box; }
 
 body {
     font-size: 24px;
+    font-weight: 400;
     font-family: 'Space Mono', monospace;
+    background-color: $Light-grayish-cyan;
+    padding: 0;
+    margin: 0;
+}
+
+#app {
+    text-align: center;
+
+    .imgLogo {
+        margin: 2em;
+    }
+
+    .contenedor {
+        background-color: $White;
+        width: 100vw;
+        border-radius: 1em 1em 0px 0px;
+        color: $Dark-grayish-cyan2;
+
+        .bloque1 {
+            padding: 1em;
+
+            .sectionBill {
+                text-align: left;
+
+                label {
+                    display: block;
+                }
+
+                span {
+                    position: relative;
+                    top: -2em;
+                    left: .6em;
+
+                    img {
+                        width: .7em;
+                    }
+                }
+
+                input {
+                    width: 100%;
+                    font-size: 1.6em;
+                    font-weight: 700;
+                    text-align: right;
+                    background-color: $Light-grayish-cyan2;
+                    color: $Dark-grayish-cyan;
+                    border: none;
+                    border-radius: 10px;
+                    padding: .15em .4em;
+                }
+            }
+
+            .seccionPorcentaje {
+                text-align: left;
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                gap: .7em;
+
+                label {
+                    width: 100%;
+                }
+
+                div {
+                    width: 47%;
+                    background-color: $Dark-grayish-cyan2;
+                    color: $White;
+                    font-weight: 700;
+                    text-align: center;
+                    border-radius: 5px;
+                    padding: .4em .2em;
+
+                    .input {
+                        display: none;
+                    }
+                }
+
+                .custom {
+                    background-color: $Light-grayish-cyan2;
+                    padding: 0;
+
+                    .txtCustom {
+                        width: 96%;
+                        height: 96%;
+                        font-size: 1em;
+                        background-color: $Light-grayish-cyan2;
+                        border: none;
+                        text-align: right;
+                        padding: 0px .5em;
+                        color: $Dark-grayish-cyan;
+                        font-weight: 700;
+                        border-radius: 5px;
+                    }
+                }
+            }
+
+            .sectionPersonas {
+                margin-top: 2.5em;
+                text-align: left;
+
+                input {
+                    width: 100%;
+                    font-size: 1.6em;
+                    font-weight: 700;
+                    text-align: right;
+                    background-color: $Light-grayish-cyan2;
+                    color: $Dark-grayish-cyan;
+                    border: none;
+                    border-radius: 10px;
+                    padding: .15em .4em;
+                    margin-top: .3em;
+                }
+
+                span {
+                    position: relative;
+                    top: -2em;
+                    left: .8em;
+
+                    img {
+                        width: .7em;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .attribution { font-size: 11px; text-align: center; a { color: hsl(228, 45%, 44%); } }
