--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,11 @@ body {
   text-align: left;
 }
 
+#app .contenedor .bloque1 .sectionBill input[type=number] {
+  -webkit-appearance: textfield !important;
+  -moz-appearance: textfield !important;
+}
+
 #app .contenedor .bloque1 .sectionBill input:hover {
   cursor: pointer;
 }
@@ -111,6 +116,11 @@ body {
   padding: 0;
 }
 
+#app .contenedor .bloque1 .seccionPorcentaje .custom input[type=number] {
+  -webkit-appearance: textfield !important;
+  -moz-appearance: textfield !important;
+}
+
 #app .contenedor .bloque1 .seccionPorcentaje .custom .txtCustom {
   width: 96%;
   height: 96%;
@@ -140,6 +150,11 @@ body {
   border-radius: 10px;
   padding: .15em .4em;
   margin-top: .3em;
+}
+
+#app .contenedor .bloque1 .sectionPersonas input[type=number] {
+  -webkit-appearance: textfield !important;
+  -moz-appearance: textfield !important;
 }
 
 #app .contenedor .bloque1 .sectionPersonas span {
