--- a/css/index.scss
+++ b/css/index.scss
@@ -42,7 +42,12 @@ body {
             .sectionBill {
                 text-align: left;
 
-                input{
+                input {
+                    &[type=number] {
+                        -webkit-appearance: textfield !important;
+                        -moz-appearance:textfield !important;
+                    }
+
                     &:hover {
                         cursor: pointer;
                     }
@@ -107,6 +112,13 @@ body {
                 .custom {
                     background-color: $Light-grayish-cyan2;
                     padding: 0;
+                    
+                    input {
+                        &[type=number] {
+                            -webkit-appearance: textfield !important;
+                            -moz-appearance:textfield !important;
+                        }
+                    }
 
                     .txtCustom {
                         width: 96%;
@@ -138,6 +150,11 @@ body {
                     border-radius: 10px;
                     padding: .15em .4em;
                     margin-top: .3em;
+
+                    &[type=number] {
+                        -webkit-appearance: textfield !important;
+                        -moz-appearance:textfield !important;
+                    }
                 }
 
                 span {
