--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,16 @@ body {
 
 #app {
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #app .imgLogo {
@@ -56,6 +66,7 @@ body {
 
 #app .contenedor .bloque1 .sectionBill label {
   display: block;
+  font-size: .75em;
 }
 
 #app .contenedor .bloque1 .sectionBill span {
@@ -91,7 +102,9 @@ body {
 }
 
 #app .contenedor .bloque1 .seccionPorcentaje .label {
+  width: 100%;
   display: block;
+  font-size: .75em;
 }
 
 #app .contenedor .bloque1 .seccionPorcentaje .label .dnone {
@@ -162,6 +175,22 @@ body {
   text-align: left;
 }
 
+#app .contenedor .bloque1 .sectionPersonas label {
+  font-size: .73em;
+}
+
+#app .contenedor .bloque1 .sectionPersonas .nozero {
+  width: 50%;
+  color: red;
+  display: none;
+  font-size: .65em;
+  text-align: right;
+}
+
+#app .contenedor .bloque1 .sectionPersonas .dinblock {
+  display: inline-block;
+}
+
 #app .contenedor .bloque1 .sectionPersonas input {
   width: 100%;
   font-size: 1.6em;
@@ -173,6 +202,7 @@ body {
   border-radius: 10px;
   padding: .15em .4em;
   margin-top: .3em;
+  margin-bottom: .3em;
 }
 
 #app .contenedor .bloque1 .sectionPersonas input[type=number] {
@@ -182,7 +212,7 @@ body {
 
 #app .contenedor .bloque1 .sectionPersonas span {
   position: relative;
-  top: -2em;
+  top: 2.5em;
   left: .8em;
 }
 
@@ -250,6 +280,40 @@ body {
 #app .contenedor button:hover {
   background-color: #c5e4e7;
   cursor: pointer;
+}
+
+@media (min-width: 720px) {
+  #app {
+    height: 900px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  #app .contenedor {
+    width: 65vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 10%;
+    border-radius: 20px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #app .contenedor .bloque1, #app .contenedor .bloque2 {
+    width: 48%;
+  }
+  #app .contenedor .bloque1 .seccionPorcentaje div {
+    width: 30%;
+  }
+  #app .contenedor .bloque2 {
+    padding: 1.5em;
+  }
+  #app .contenedor .bloque2 .subBloque {
+    margin-top: 1em;
+  }
+  #app .contenedor .bloque2 button {
+    margin-top: 6.2em;
+  }
 }
 
 .attribution {
