--- a/css/index.scss
+++ b/css/index.scss
@@ -24,6 +24,9 @@ body {
 
 #app {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     .imgLogo {
         margin: 2em;
@@ -59,6 +62,7 @@ body {
 
                 label {
                     display: block;
+                    font-size: .75em;
                 }
 
                 span {
@@ -91,7 +95,9 @@ body {
                 gap: .7em;
 
                 .label {
+                    width: 100%;
                     display: block;
+                    font-size: .75em;
 
                     .dnone {
                         display: none;
@@ -164,6 +170,22 @@ body {
                 margin-top: 2.5em;
                 text-align: left;
 
+                label {
+                    font-size: .73em;
+                }
+
+                .nozero {
+                    width: 50%;
+                    color: red;
+                    display: none;
+                    font-size: .65em;
+                    text-align: right;
+                }
+
+                .dinblock {
+                    display: inline-block;
+                }
+
                 input {
                     width: 100%;
                     font-size: 1.6em;
@@ -175,6 +197,7 @@ body {
                     border-radius: 10px;
                     padding: .15em .4em;
                     margin-top: .3em;
+                    margin-bottom: .3em;
 
                     &[type=number] {
                         -webkit-appearance: textfield !important;
@@ -184,7 +207,7 @@ body {
 
                 span {
                     position: relative;
-                    top: -2em;
+                    top: 2.5em;
                     left: .8em;
 
                     img {
@@ -248,6 +271,43 @@ body {
             &:hover {
                 background-color: $Light-grayish-cyan;
                 cursor: pointer;
+            }
+        }
+    }
+
+    @media (min-width: 720px) {
+        height: 900px;
+        justify-content: space-around;
+
+        .contenedor {
+            width: 65vw;
+            display: flex;
+            margin-bottom: 10%;
+            border-radius: 20px;
+            justify-content: center;
+
+            .bloque1, .bloque2 {
+                width: 48%;
+            }
+
+            .bloque1 {
+                .seccionPorcentaje {
+                    div {
+                        width: 30%;
+                    }
+                }
+            }
+
+            .bloque2 {
+                padding: 1.5em;
+
+                .subBloque {
+                    margin-top: 1em;
+                }
+
+                button {
+                    margin-top: 6.2em;
+                }
             }
         }
     }
